--- a/configs/sst_platform_storage-packages-unwanted.yaml
+++ b/configs/sst_platform_storage-packages-unwanted.yaml
@@ -13,6 +13,7 @@ data:
   - libhbaapi
   - libhbalinux
   - python-di
+  - udisks2-zram
   # - kernel-rt.0010.0055
   # sst_platform_storage owns this, but there isn't a package in Fedora.
 
